syntax = "proto3";

option go_package = "./albums";

message Album {
    string id = 1;
    string title = 2;
    string artist = 3;
    float price = 4;
}

message GetAlbumListRequest {}
message GetAlbumListResponse { repeated Album albums = 1; }

message GetAlbumByIdRequest { string id = 1; }
message GetAlbumByIdResponse { Album album = 1; }


service Inventory {
    rpc GetAlbumList(GetAlbumListRequest) returns (GetAlbumListResponse) {}
    rpc GetAlbumById(GetAlbumByIdRequest) returns (GetAlbumByIdResponse) {}
}